feat: add geocrab to projects page

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -18,5 +18,11 @@ import ProjectBlock from "../components/ProjectBlock.astro";
       description="A personal website built with Astro, Tailwind CSS, and Markdown."
       tech={["Astro", "React", "Tailwind", "Markdown"]}
     />
+    <ProjectBlock
+      href="https://github.com/filipedelmonte/geocrab"
+      title="🦀 Geocrab"
+      description="geocrab is a fast, in-memory reverse geocoder written in Rust"
+      tech={["Rust", "rstar", "actix-web"]}
+    />
   </div>
 </MainLayout>
